logo complete and image hosting complete

--- a/promotional_1.html
+++ b/promotional_1.html
@@ -143,9 +143,33 @@
           width: 100%;
           max-width: 600px;
         ">
+
+      
+
       <!-- START OF LOGO -->
       <tr>
-        <td align="center">
+        <td align="center" style="padding-top: 30px;">
+          <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
+            <tbody>
+              <tr>
+                <td align="center" width="80%" style="align-items: center;">
+                  <a
+                    style="text-transform:uppercase; padding: 10px 0 0 0; margin-bottom: 0;">
+                    <img src="https://i.ibb.co/KDGrSZm/logo-no-background.png" alt="logo-no-background" border="0" alt="" width="100px" height="100px">
+                  </a>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </td>
+      </tr>
+      <!-- END OF OF LOGO -->
+
+
+
+      <!-- START OF BLACK FRIDAY SALE TEXT  -->
+      <tr>
+        <td align="center" style="padding-bottom: 10px;">
           <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
             <tbody>
               <tr>
@@ -164,7 +188,7 @@
           </table>
         </td>
       </tr>
-      <!-- END OF OF LOGO -->
+      <!-- END OF BLACK FRIDAY SALE TEXT -->
 
       <!-- START OF MAIN HERO IMAGE -->
       <tr>
@@ -173,7 +197,7 @@
             <tbody>
               <tr>
                 <td style="position: relative">
-                  <img src="./promotional_1_images/hero-1-resized.jpg"
+                  <img src="https://i.ibb.co/vxJgGxR/hero-1-resized.jpg" alt="hero-1-resized" border="0"
                     style="width: 600px; height: 350px; display: block; position: relative ">
                   </img>
                   <a href="#" target="_blank"
@@ -232,7 +256,8 @@
                     style="font-size: 16px; text-transform: uppercase; border-radius: 2px; color: white; background-color: rgb(36, 10, 10);padding: 18px; text-decoration: none; z-index: 5; letter-spacing: 3px; position: absolute; top: -23px; right: 200px;">
                     NEW ARRIVALS
                   </a>
-                  <img src="./promotional_1_images/sofa-4-resized.jpg" width=500px;
+                  <img src="https://i.ibb.co/s5BPqfp/sofa-4-resized.jpg"  alt="sofa-4-resized" border="0"
+                    width=500px;
                     style="width: 80%; height: 300px; display: block; position: relative; text-align: center; align-items: center; margin: 0 auto; ">
                   </img>
                 </td>
@@ -268,7 +293,8 @@
                     style="font-size: 16px; text-transform: uppercase; border-radius: 2px; color: white; background-color: rgb(36, 10, 10);padding: 18px; text-decoration: none; z-index: 5; letter-spacing: 3px; position: absolute; top: -23px; right: 200px; padding-left: 20px; padding-right: 20px;right: 240px;">
                     ON SALE
                   </a>
-                  <img src="./promotional_1_images/sofa-2-resized.jpg" width=500px;
+                  <img src="https://i.ibb.co/p3xhD6x/sofa-2-resized.jpg" alt="sofa-2-resized" border="0"
+                    width=500px;
                     style="width: 80%; height: 300px; display: block; position: relative; text-align: center; align-items: center; margin: 0 auto; ">
                   </img>
                 </td>
@@ -364,7 +390,8 @@
                       <tr>  
                         <td class="padding" >
                           <a href="#" target="_blank">
-                            <img src="./promotional_1_images/chair-1-resized.jpg" style="width: 220px; display: inline-block; align-items: center;" height="100%">
+                            <img src="https://i.ibb.co/Fzk1FZT/chair-1-resized.jpg" alt="chair-1-resized" border="0" 
+                            style="width: 220px; display: inline-block; align-items: center;" height="100%">
                           </a>
                           <a href="#" target="_blank">
                              <p style="font-size: 12px; color: black; text-align: right; letter-spacing: 2px">VIEW MORE</p>
@@ -372,7 +399,9 @@
                         </td>
                         <!-- <td width="10px">&nbsp;</td> -->
                         <td class="padding">
-                          <a href="#" target="_blank"><img src="./promotional_1_images/chair-4-resized.jpg" style="width: 220px; display: inline-block; align-items: center;" height="100%"></a>
+                          <a href="#" target="_blank">
+                            <img src="https://i.ibb.co/D75Rqww/chair-4-resized.jpg" alt="chair-4-resized" border="0" style="width: 220px; display: inline-block; align-items: center;" height="100%">
+                          </a>
                           <a href="#" target="_blank">
                             <p style="font-size: 12px; color: black; text-align: right; letter-spacing: 2px">VIEW MORE</p>
                           </a>
@@ -393,7 +422,7 @@
               </tbody>
             </table>
             </td>
-            </tr>
+      </tr>
     <!-- END OF 1st ROW FURNITURE -->
 
     <!-- START OF 2nd ROW FURNITURE-->
@@ -413,7 +442,7 @@
                     <tr>  
                       <td class="padding" >
                         <a href="#" target="_blank">
-                          <img src="./promotional_1_images/side-1-resized.jpg" style="width: 220px; display: inline-block; align-items: center;" height="100%">
+                          <img src="https://i.ibb.co/qy5QRgD/side-1-resized.jpg" alt="side-1-resized" border="0" style="width: 220px; display: inline-block; align-items: center;" height="100%">
                         </a>
                         <a href="#" target="_blank">
                         <p style="font-size: 12px; color: black; text-align: right; letter-spacing: 2px">VIEW MORE</p>
@@ -422,7 +451,7 @@
                       <!-- <td width="10px">&nbsp;</td> -->
                       <td class="padding">
                         <a href="#" target="_blank">
-                          <img src="./promotional_1_images/side-4-resized.jpg" style="width: 220px; display: inline-block; align-items: center;" height="100%">
+                          <img src="https://i.ibb.co/M5B1tQR/side-4-resized.jpg" alt="side-4-resized" border="0" style="width: 220px; display: inline-block; align-items: center;" height="100%">
                         </a>
                         <a href="#" target="_blank">
                           <p style="font-size: 12px; color: black; text-align: right; letter-spacing: 2px">VIEW MORE</p>
@@ -439,12 +468,12 @@
                 <![endif]-->
 
           
-                  </td>
+              </td>
             </tr>
-            </tbody>
-          </table>
-          </td>
-          </tr>
+          </tbody>
+        </table>
+      </td>
+    </tr>
     <!-- END OF 2nd ROW FURNITURE -->
 
     <!-- START OF 3rd ROW FURNITURE-->
@@ -463,14 +492,18 @@
                   <tbody>
                     <tr>  
                       <td class="padding" >
-                        <a href="#" target="_blank"><img src="./promotional_1_images/side-5-resized.jpg" style="width: 220px; display: inline-block; align-items: center;" height="100%"></a>
+                        <a href="#" target="_blank">
+                          <img src="https://i.ibb.co/hCrPgtB/side-5-resized.jpg" alt="side-5-resized" border="0" style="width: 220px; display: inline-block; align-items: center;" height="100%">
+                        </a>
                         <a href="#" target="_blank">
                         <p style="font-size: 12px; color: black; text-align: right; letter-spacing: 2px">VIEW MORE</p>
                         </a>
                       </td>
                       <!-- <td width="10px">&nbsp;</td> -->
                       <td class="padding">
-                        <a href="#" target="_blank"><img src="./promotional_1_images/side-2-resized.jpg" style="width: 220px; display: inline-block; align-items: center;" height="100%"></a>
+                        <a href="#" target="_blank">
+                          <img src="https://i.ibb.co/K5PDHGj/side-2-resized.jpg" alt="side-2-resized" border="0" style="width: 220px; display: inline-block; align-items: center;" height="100%">
+                        </a>
                         <a href="#" target="_blank">
                           <p style="font-size: 12px; color: black; text-align: right; letter-spacing: 2px">VIEW MORE</p>
                         </a>
@@ -491,23 +524,23 @@
             </tbody>
           </table>
           </td>
-          </tr>
+    </tr>
     <!-- END OF 3rd ROW FURNITURE -->
 
 
-       <!-- WHITE SPACE -->
-       <tr>
-        <td>
-          <table>
-            <tbody>
-              <tr>
-                <td  height="40px">&nbsp;</td>
-              </tr>
-            </tbody>
-          </table>
-        </td>
-      </tr>
-      <!-- WHITE SPACE -->
+    <!-- WHITE SPACE -->
+    <tr>
+    <td>
+      <table>
+        <tbody>
+          <tr>
+            <td  height="40px">&nbsp;</td>
+          </tr>
+        </tbody>
+      </table>
+    </td>
+    </tr>
+  <!-- WHITE SPACE -->
 
     <!-- START OF SINGLE MODERN STYLE SHOWCASE -->
     <tr>
@@ -516,7 +549,7 @@
           <tbody>
             <tr>
               <td style="position: relative">
-                <img src="./promotional_1_images/bed-1-resized.jpg"
+                <img src="https://i.ibb.co/gVwGZYs/bed-1-resized.jpg" alt="bed-1-resized" border="0"
                   style="width: 600px; height: 350px; display: block; ">
                 </img>
                 <p
@@ -635,7 +668,7 @@
                     <tr>  
                       <td class="padding" >
                         <a href="#" target="_blank">
-                          <img src="./promotional_1_images/sofa-3-resized.jpg" style="width: 450px; display: inline-block; align-items: center;" height="100%">
+                          <img src="https://i.ibb.co/wdzS3cP/sofa-3-resized.jpg" alt="sofa-3-resized" border="0" style="width: 450px; display: inline-block; align-items: center;" height="100%">
                         </a>
                         <a href="#" target="_blank">
                         <p style="font-size: 12px; color: black; text-align: right; letter-spacing: 2px">VIEW MORE
@@ -692,7 +725,7 @@
                     <tr>  
                       <td class="padding" >
                         <a href="#" target="_blank">
-                          <img src="./promotional_1_images/sofa-1-resized.jpg" style="width: 450px; display: inline-block; align-items: center;" height="100%">
+                          <img src="https://i.ibb.co/mbGsB7m/sofa-1-resized.jpg" alt="sofa-1-resized" border="0" style="width: 450px; display: inline-block; align-items: center;" height="100%">
                         </a>
                         <a href="#" target="_blank">
                         <p style="font-size: 12px; color: black; text-align: right; letter-spacing: 2px">VIEW MORE
@@ -836,7 +869,7 @@
               <td align="center">
                 <p style="Margin:0; font-size: 12px; font-family: Lato, sans-serif;">We value your feedback! Feel free to email us at 
                 <a href="#" target="_blank" style="color: gray; text-decoration: underline; line-height: 24px; font-weight: 400;">
-                feedback@modernfurniture.com
+                feedback@sleekfurniture.com
                 </a>
               </p>
               </td>
