started media queries except two columns

--- a/promotional_1.html
+++ b/promotional_1.html
@@ -99,25 +99,112 @@
 
     @media screen and (max-width: 599.98px) {
       .two-columns .padding {
-        padding-right: 0 !important;
-        padding-left: 0 !important;
+        padding-right: 10px !important;
+        padding-left: 10px !important;
       }
 
-      .two-columns .content img {
+      /* .two-columns .content img {
         width: 300px !important;
         max-width: 300px !important;
-      }
-    }
+      }*/
+    } 
 
     @media screen and (max-width: 399.98px) {
-      .two-columns .padding {
-        padding-right: 0 !important;
-        padding-left: 0 !important;
+      .one-column {
+        padding-right: 5px !important;
+        padding-left: 5px !important;
       }
 
-      .two-columns .content img {
-        width: 300px !important;
-        max-width: 300px !important;
+      img.content  {
+        width: 460px !important;
+        max-width: 360px !important;
+      }
+
+      .main-hero-text-padding {
+        padding-left: 65px !important;
+        padding-right: 65px !important;
+        padding-top: 5px !important;
+        padding-bottom: 15px !important;
+        font-size: 17px;
+        word-wrap: break-word;
+      }
+
+      .new-arrivals-padding {
+        padding-left: 65px !important;
+        padding-right: 65px !important;
+        padding-top: 5px !important;
+        padding-bottom: 15px !important;
+        font-size: 17px;
+        word-wrap: break-word;
+      }
+
+      .text-padding {
+        padding-left: 65px !important;
+        padding-right: 65px !important;
+        padding-top: 30px !important;
+        padding-bottom: 25px !important;
+        font-size: 17px;
+        word-wrap: break-word;
+      }
+
+      .button-align {
+        right: 80px !important;
+      }
+
+      .main-button-align {
+        right: 280px !important;
+      }
+
+      .one-col-img  img {
+        padding: 0px !important;
+       margin-left: 0px !important;
+       margin-right: 0px !important;
+        width: 520px !important;
+      }
+
+      .align-main-image {
+        width: 600px !important;
+        height: 350px !important;
+        left: 352px !important;
+        padding: 0px !important;
+        margin: 0px !important;
+        display: block !important;
+        max-width: 100% !important;
+
+      }
+
+      .align-new-arrivals-image  {
+        width: 600px !important;
+        height: 350px !important;
+        left: 141px !important;
+        padding: 10px !important;
+        margin: 0px !important;
+        display: block !important;
+        max-width: 100% !important;
+      }
+ 
+      
+      .align-modern-style-image  {
+        width: 600px !important;
+        height: 350px !important;
+        left: -9px !important;
+        padding: 0px !important;
+        margin: 0px !important;
+        max-width: 100% !important;
+      }
+
+      .view-more-padding {
+        font-size: 20px;
+        padding-right: 10px !important;
+      }
+
+      .follow-us-padding {
+        padding-top: 20px !important;
+        padding-bottom: 10px !important;
+      }
+      
+      .footer-text  p {
+        font-size: 14px !important;
       }
     }
 
@@ -196,8 +283,8 @@
           <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
             <tbody>
               <tr>
-                <td style="position: relative">
-                  <img src="https://i.ibb.co/vxJgGxR/hero-1-resized.jpg" alt="hero-1-resized" border="0"
+                <td class="main-button-align" style="position: relative">
+                  <img class="align-main-image" src="https://i.ibb.co/vxJgGxR/hero-1-resized.jpg" alt="hero-1-resized" border="0"
                     style="width: 600px; height: 350px; display: block; position: relative ">
                   </img>
                   <a href="#" target="_blank"
@@ -217,7 +304,7 @@
         <td align="center" style="padding-top: 20px">
           <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" width="90%">
             <tr>
-              <td>
+              <td class="new-arrivals-padding">
                 <p align="center"
                   style="Margin: 0; line-height: 32px; font-size: 18px; word-spacing: 3px;  padding-top: 8px;">
                   Upgrade your home decor with our Black Friday sale. Get the most stylish and chic furniture pieces at unbeatable prices. From sleek and modern sofas to elegant dining tables, we have everything you need to elevate your living space. 
@@ -251,12 +338,12 @@
           <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
             <tbody>
               <tr>
-                <td style="position: relative; text-align: center; align-items: center;">
+                <td class="button-align" style="position: relative; text-align: center; align-items: center;">
                   <a href=" #" target="_blank"
                     style="font-size: 16px; text-transform: uppercase; border-radius: 2px; color: white; background-color: rgb(36, 10, 10);padding: 18px; text-decoration: none; z-index: 5; letter-spacing: 3px; position: absolute; top: -23px; right: 200px;">
                     NEW ARRIVALS
                   </a>
-                  <img src="https://i.ibb.co/s5BPqfp/sofa-4-resized.jpg"  alt="sofa-4-resized" border="0"
+                  <img class="align-new-arrivals-image" src="https://i.ibb.co/s5BPqfp/sofa-4-resized.jpg"  alt="sofa-4-resized" border="0"
                     width=500px;
                     style="width: 80%; height: 300px; display: block; position: relative; text-align: center; align-items: center; margin: 0 auto; ">
                   </img>
@@ -288,12 +375,12 @@
           <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
             <tbody>
               <tr>
-                <td style="position: relative; text-align: center; align-items: center;">
+                <td class="button-align" style="position: relative; text-align: center; align-items: center;">
                   <a href=" #" target="_blank"
                     style="font-size: 16px; text-transform: uppercase; border-radius: 2px; color: white; background-color: rgb(36, 10, 10);padding: 18px; text-decoration: none; z-index: 5; letter-spacing: 3px; position: absolute; top: -23px; right: 200px; padding-left: 20px; padding-right: 20px;right: 240px;">
                     ON SALE
                   </a>
-                  <img src="https://i.ibb.co/p3xhD6x/sofa-2-resized.jpg" alt="sofa-2-resized" border="0"
+                  <img  class="align-new-arrivals-image" src="https://i.ibb.co/p3xhD6x/sofa-2-resized.jpg" alt="sofa-2-resized" border="0"
                     width=500px;
                     style="width: 80%; height: 300px; display: block; position: relative; text-align: center; align-items: center; margin: 0 auto; ">
                   </img>
@@ -345,8 +432,8 @@
           <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
             <tbody>
               <tr>
-                <td align="center" style="background-color: rgb(231, 231, 231)">
-                  <p
+                <td align="center" class="new-arrivals-padding" style="background-color: rgb(231, 231, 231)">
+                  <p 
                     style="font-size: 18px; padding: 0; margin: 0; margin-bottom: 15px; font-weight: 400; color: rgb(36, 10, 10); line-height: 28px;width: 85%; margin-bottom: 25px">
                     We are excited to announce the arrival of our new collection of modern furniture! Our new sofa,
                     chairs and side furniture are designed to add a touch of elegance and sophistication to any room in
@@ -388,19 +475,18 @@
                   <table style="margin: 0 auto">
                     <tbody>
                       <tr>  
-                        <td class="padding" >
+                        <td class="padding two-columns" >
                           <a href="#" target="_blank">
-                            <img src="https://i.ibb.co/Fzk1FZT/chair-1-resized.jpg" alt="chair-1-resized" border="0" 
-                            style="width: 220px; display: inline-block; align-items: center;" height="100%">
+                            <img class="two-columns content" src="https://i.ibb.co/Fzk1FZT/chair-1-resized.jpg" alt="chair-1-resized" border="0" style="width: 220px; display: inline-block; align-items: center;" height="100%">
                           </a>
                           <a href="#" target="_blank">
                              <p style="font-size: 12px; color: black; text-align: right; letter-spacing: 2px">VIEW MORE</p>
                           </a>
                         </td>
                         <!-- <td width="10px">&nbsp;</td> -->
-                        <td class="padding">
+                        <td class="padding two-columns one-column">
                           <a href="#" target="_blank">
-                            <img src="https://i.ibb.co/D75Rqww/chair-4-resized.jpg" alt="chair-4-resized" border="0" style="width: 220px; display: inline-block; align-items: center;" height="100%">
+                            <img class="content" src="https://i.ibb.co/D75Rqww/chair-4-resized.jpg" alt="chair-4-resized" border="0" style="width: 220px; display: inline-block; align-items: center;" height="100%">
                           </a>
                           <a href="#" target="_blank">
                             <p style="font-size: 12px; color: black; text-align: right; letter-spacing: 2px">VIEW MORE</p>
@@ -548,8 +634,8 @@
       <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" width="600px" height="350px">
         <tbody>
           <tr>
-            <td style="position: relative">
-              <img src="https://i.ibb.co/gVwGZYs/bed-1-resized.jpg" alt="bed-1-resized" border="0"
+            <td style="position: relative" class="align-modern-style-image">
+              <img  src="https://i.ibb.co/gVwGZYs/bed-1-resized.jpg" alt="bed-1-resized" border="0"
                 style="width: 600px; height: 350px; display: block; ">
               </img>
               <p
@@ -572,7 +658,7 @@
       <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
         <tbody>
           <tr>
-            <td style="position: relative; text-align: center; align-items: center;">
+            <td style="position: relative; text-align: center; align-items: center;" class="button-align">
               <a href=" #" target="_blank"
                 style="font-size: 16px; text-transform: uppercase; border-radius: 2px; color: white; background-color: rgb(36, 10, 10);padding: 18px; text-decoration: none; z-index: 5; letter-spacing: 3px; position: absolute; top: -23px; right: 225px;">
                 VIEW MORE
@@ -592,9 +678,9 @@
       <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" width="90%">
         <tbody>
           <tr>
-            <td style="padding-top: 50px;">
-              <p align="center"
-              style="Margin: 0; line-height: 32px; font-size: 18px; word-spacing: 3px;  padding-top: 8px;"">Don't miss out on this limited-time offer and treat yourself to the luxury furniture you deserve. Visit us online or in-store today and save big on your dream furniture pieces. 
+            <td style="padding-top: 50px;" class="text-padding">
+              <p  align="center"
+              style="Margin: 0; line-height: 32px; font-size: 18px; word-spacing: 3px;  padding-top: 8px;">Don't miss out on this limited-time offer and treat yourself to the luxury furniture you deserve. Visit us online or in-store today and save big on your dream furniture pieces. 
               </p>
             </td>
           </tr>
@@ -657,7 +743,7 @@
       <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
         <tbody>
           <tr>
-            <td class=one-column width="100%" style="align-items: center; padding: 0; text-align: center;">
+            <td class="" width="100%" style="align-items: center; padding: 0; text-align: center;">
               <!--[if (gte mso 9) | (IE)]>
                 <table width="100%" style="border-spacing: 0;" role="presentation">
                   <tr>
@@ -666,12 +752,12 @@
               <table style="margin: 0 auto">
                 <tbody>
                   <tr>  
-                    <td class="padding" >
+                    <td class="one-col-img" >
                       <a href="#" target="_blank">
-                        <img src="https://i.ibb.co/wdzS3cP/sofa-3-resized.jpg" alt="sofa-3-resized" border="0" style="width: 450px; display: inline-block; align-items: center;" height="100%">
+                        <img  src="https://i.ibb.co/wdzS3cP/sofa-3-resized.jpg" alt="sofa-3-resized" border="0" style="width: 450px; display: inline-block; align-items: center;" height="100%">
                       </a>
                       <a href="#" target="_blank">
-                      <p style="font-size: 12px; color: black; text-align: right; letter-spacing: 2px">VIEW MORE
+                      <p class="view-more-padding" style="font-size: 12px; color: black; text-align: right; letter-spacing: 2px">VIEW MORE
                       </p>
                       </a>
                     </td>
@@ -723,12 +809,12 @@
               <table style="margin: 0 auto">
                 <tbody>
                   <tr>  
-                    <td class="padding" >
+                    <td class="one-col-img" >
                       <a href="#" target="_blank">
                         <img src="https://i.ibb.co/mbGsB7m/sofa-1-resized.jpg" alt="sofa-1-resized" border="0" style="width: 450px; display: inline-block; align-items: center;" height="100%">
                       </a>
                       <a href="#" target="_blank">
-                      <p style="font-size: 12px; color: black; text-align: right; letter-spacing: 2px">VIEW MORE
+                      <p class="view-more-padding" style="font-size: 12px; color: black; text-align: right; letter-spacing: 2px">VIEW MORE
                       </p>
                       </a>
                     </td>
@@ -758,7 +844,7 @@
       <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
         <tbody>
           <tr>
-            <td>
+            <td class="follow-us-padding">
               <p  style="Margin: 0; line-height: 30px; font-family: 'Montserrat', sans-serif; font-weight: 500;font-size: 14px; word-spacing: 1px;  padding-top: 8px; letter-spacing: 2px; color:rgb(36, 10, 10); text-align: center;padding-bottom: 3px;">FOLLOW US
             </td>
           </tr>
@@ -846,13 +932,13 @@
 
   <!-- START OF PRIVACY POLICY -->
   <tr>
-    <td align="center" style="padding-top: 25px; padding-bottom: 25px;">
+    <td align="center" style="padding-top: 25px; padding-bottom: 25px;" class="footer-text">
       <table 
       align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%" class="responsive-table">
         <tbody>
           <tr>
-            <td align="center">
-              <p style="Margin:0; font-size: 12px; font-family: Lato, sans-serif;">We value your feedback! Feel free to email us at 
+            <td align="center" >
+              <p class="" style="Margin:0; font-size: 12px; font-family: Lato, sans-serif;">We value your feedback! Feel free to email us at 
               <a href="#" target="_blank" style="color: gray; text-decoration: underline; line-height: 24px; font-weight: 400;">
               feedback@sleekfurniture.com
               </a>
