finished aligning all buttons center

--- a/promotional_1.html
+++ b/promotional_1.html
@@ -157,7 +157,6 @@
       }
 
 
-
       .main-hero-text-padding {
         padding-left: 35px !important;
         padding-right: 35px !important;
@@ -282,7 +281,7 @@
               
                   <p style="text-align: center;">
                     <a href="#" target="_blank" 
-                    style="position: absolute; right:220px; bottom: -5px;font-size: 16px; text-transform: uppercase; border-radius: 2px; color: white; background-color: rgb(36, 10, 10);padding: 18px; text-decoration: none;   z-index: 3; letter-spacing: 3px;">
+                    style="position: absolute; right:230px; bottom: -5px;font-size: 16px; text-transform: uppercase; border-radius: 2px; color: white; background-color: rgb(36, 10, 10);padding: 18px; text-decoration: none;   z-index: 3; letter-spacing: 3px;">
                     SHOP NOW
                     </a>
                   </p>
@@ -375,7 +374,7 @@
               <tr>
                 <td style="position: relative; text-align: center; align-items: center;">
                   <a href=" #" target="_blank"
-                    style="font-size: 16px; text-transform: uppercase; border-radius: 2px; color: white; background-color: rgb(36, 10, 10);padding: 18px; text-decoration: none; z-index: 5; letter-spacing: 3px; position: absolute; top: -23px; right: 200px; padding-left: 20px; padding-right: 20px;right: 240px;">
+                    style="font-size: 16px; text-transform: uppercase; border-radius: 2px; color: white; background-color: rgb(36, 10, 10);padding: 18px; text-decoration: none; z-index: 5; letter-spacing: 3px; position: absolute; top: -23px; right: 250px; padding-left: 20px; padding-right: 20px;">
                     ON SALE
                   </a>
                   <img  class="align-images" src="https://i.ibb.co/p3xhD6x/sofa-2-resized.jpg" alt="sofa-2-resized" border="0"
