add readme and photo for readme

--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
       <!-- WHITE SPACE -->
       <tr>
         <td>
-          <table>
+          <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" width="90%">
               <tr>
                 <td width="80px" height="50px">&nbsp;</td>
               </tr>
@@ -400,7 +400,7 @@
       <!-- WHITE SPACE -->
       <tr>
         <td>
-          <table>
+          <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" width="90%">
               <tr>
                 <td width="80px" height="80px">&nbsp;</td>
               </tr>
@@ -435,7 +435,7 @@
         <!-- WHITE SPACE -->
         <tr>
           <td>
-            <table>
+            <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" width="90%">
                 <tr>
                   <td width="60px" height="60px">&nbsp;</td>
                 </tr>
@@ -485,7 +485,7 @@
         <!-- WHITE SPACE -->
         <tr>
           <td>
-            <table>
+            <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" width="90%">
                 <tr>
                   <td  height="40px">&nbsp;</td>
                 </tr>
@@ -507,7 +507,7 @@
                         <tr>
                           <td width="300" valign="top" style:"padding: 0;">
                     <![endif]-->
-                    <table style="Margin: 0 auto">
+                    <table style="Margin: 0 auto" role="presentation">
                         <tr>  
                           <td class="padding two-columns full-block full-width" >
                             <a href="#" target="_blank">
@@ -557,7 +557,7 @@
                         <td width="300" valign="top" style:"padding: 0;">
                     <![endif]-->
 
-                    <table style="Margin: 0 auto">
+                    <table style="Margin: 0 auto" role="presentation">
                         <tr>  
                           <td class="padding two-columns full-block full-width" >
                             <a href="#" target="_blank">
@@ -609,7 +609,7 @@
                         <td width="300" valign="top" style:"padding: 0;">
                     <![endif]-->
 
-                    <table style="margin: 0 auto">
+                    <table style="margin: 0 auto" role="presentation">
                         <tr>  
                           <td class="padding full-block full-width" >
                             <a href="#" target="_blank">
@@ -651,7 +651,7 @@
         <!-- WHITE SPACE -->
         <tr>
           <td>
-            <table>
+            <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" width="90%">
                 <tr>
                   <td  height="40px">&nbsp;</td>
                 </tr>
@@ -722,7 +722,7 @@
       <!-- WHITE SPACE -->
       <tr>
         <td>
-          <table>
+          <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" width="90%">
               <tr>
                 <td  height="40px">&nbsp;</td>
               </tr>
@@ -754,7 +754,7 @@
       <!-- WHITE SPACE -->
       <tr>
         <td>
-          <table>
+          <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" width="90%">
               <tr>
                 <td  height="10px">&nbsp;</td>
               </tr>
@@ -777,7 +777,7 @@
                       <td width="300" valign="top" style:"padding: 0;">
                   <![endif]-->
 
-                  <table style="Margin: 0 auto">
+                  <table style="Margin: 0 auto" role="presentation">
                       <tr>  
                         <td class="one-col-img content" >
                           <a href="#" target="_blank">
@@ -808,7 +808,7 @@
       <!-- WHITE SPACE -->
       <tr>
         <td>
-          <table>
+          <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
               <tr>
                 <td  height="20px">&nbsp;</td>
               </tr>
@@ -831,7 +831,7 @@
                       <td width="300" valign="top" style:"padding: 0;">
                   <![endif]-->
 
-                  <table style="margin: 0 auto">
+                  <table style="margin: 0 auto" role="presentation" width="100%">
                       <tr>  
                         <td class="one-col-img" >
                           <a href="#" target="_blank">
@@ -862,7 +862,7 @@
       <!-- WHITE SPACE -->
       <tr>
         <td>
-          <table>
+          <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
               <tr>
                 <td  height="20px">&nbsp;</td>
               </tr>
@@ -937,7 +937,7 @@
       <!-- WHITE SPACE -->
       <tr>
         <td>
-          <table>
+          <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
               <tr>
                 <td  width= "30px" height="5px">&nbsp;</td>
               </tr>
