--- a/index.html
+++ b/index.html
@@ -118,11 +118,19 @@
         align-items: center !important;
       }
 
-      img.content  {
+      /* img.content  {
         width: 400px !important;
         max-width: 400px !important;
         margin: 0 auto !important;
+      } */
+
+      img.content  {
+        width: 100% !important;
+        max-width: 100% !important;
+        height: auto !important;
+        margin: 0 auto !important;
       }
+
 
       p.text-padding {
         padding-top: 8px !important;
