added .content to .full-width on 599 and 399 screen size

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       
       }
 
-      .full-width {
+      .full-width, .content {
         width: 100% !important;
         min-width: 100% !important;
         max-width: 100% !important;
@@ -152,7 +152,7 @@
         max-width: 500px !important;
       }
 
-      .full-width {
+      .full-width, .content {
         width: 100% !important;
         min-width: 100% !important;
         max-width: 100% !important;
