completed refactored the HTML email to be responsive

--- a/index3.html
+++ b/index3.html
@@ -1020,7 +1020,7 @@
 
             <!-- START OF SINGLE MODERN STYLE SHOWCASE -->
             <tr>
-              <td align="center" style="padding-top: 20px; position: relative">
+              <td align="center" style="padding-top: 20px">
                 <table
                   align="center"
                   border="0"
@@ -1030,7 +1030,7 @@
                   width="100%"
                 >
                   <tr>
-                    <td align=" center; width: 100%; ">
+                    <td align=" center;position: relative; width: 100%; ">
                       <img
                         src="https://i.ibb.co/gVwGZYs/bed-1-resized.jpg"
                         alt="bed-1-resized"
@@ -1046,7 +1046,7 @@
                           padding: 10px;
                           background-color: rgba(192, 192, 192, 0.3);
                           position: absolute;
-                          top: 40%;
+                          top: 50%;
                           left: 50%;
                           transform: translate(-50%, -50%);
                           z-index: 500 !important;
